task 2 week, final

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -33,12 +33,9 @@
         "scss/_misc/_layout.scss",
         "scss/blocks/_best.scss",
         "scss/blocks/_btn.scss",
-        "scss/blocks/_burger-slider-wrap.scss",
-        "scss/blocks/_burgers.scss",
         "scss/blocks/_fixed-menu.scss",
         "scss/blocks/_footer.scss",
         "scss/blocks/_hamburger-menu-link.scss",
-        "scss/blocks/_hamburger-menu.scss",
         "scss/blocks/_header.scss",
         "scss/blocks/_hero.scss",
         "scss/blocks/_logo.scss",
@@ -48,13 +45,11 @@
         "scss/blocks/_nav.scss",
         "scss/blocks/_order-link.scss",
         "scss/blocks/_order.scss",
-        "scss/blocks/_popups.scss",
         "scss/blocks/_reviews.scss",
         "scss/blocks/_section.scss",
         "scss/blocks/_socials.scss",
         "scss/blocks/_team-acco.scss",
-        "scss/blocks/_team.scss",
-        "scss/blocks/_text-block.scss"
+        "scss/blocks/_team.scss"
       ]
     }
   ],
