task 3 week, final

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -33,9 +33,11 @@
         "scss/_misc/_layout.scss",
         "scss/blocks/_best.scss",
         "scss/blocks/_btn.scss",
+        "scss/blocks/_burgers.scss",
         "scss/blocks/_fixed-menu.scss",
         "scss/blocks/_footer.scss",
         "scss/blocks/_hamburger-menu-link.scss",
+        "scss/blocks/_hamburger-menu.scss",
         "scss/blocks/_header.scss",
         "scss/blocks/_hero.scss",
         "scss/blocks/_logo.scss",
